--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<td>{{$index + 1}}</td>
 							<td>{{problem.id}}</td>
 							<td>{{problem.name}}</td>
-							<td>{{problem.type.toString()}}</td>
+							<td>{{problem.tags.toString()}}</td>
 						</tr>
 					</tbody>
 				</table>
